tests/neg/i22192.check
-- Error: tests/neg/i22192.scala:4:12 ----------------------------------------------------------------------------------
4 |  case City(iam = n, confused = p) => // error // error
  |            ^^^^^^^
  |            No element named `iam` is defined in selector type City
-- Error: tests/neg/i22192.scala:4:21 ----------------------------------------------------------------------------------
4 |  case City(iam = n, confused = p) => // error // error
  |                     ^^^^^^^^^^^^
  |                     No element named `confused` is defined in selector type City
-- [E006] Not Found Error: tests/neg/i22192.scala:5:7 ------------------------------------------------------------------
5 |    s"$n has a population of $p" // error // error
  |       ^
  |       Not found: n
  |
  | longer explanation available when compiling with `-explain`
-- [E006] Not Found Error: tests/neg/i22192.scala:5:30 -----------------------------------------------------------------
5 |    s"$n has a population of $p" // error // error
  |                              ^
  |                              Not found: p
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i22192.scala:8:12 ----------------------------------------------------------------------------------
8 |  case Some(iam = n) => // error
  |            ^^^^^^^
  |            No element named `iam` is defined in selector type City
-- [E006] Not Found Error: tests/neg/i22192.scala:9:4 ------------------------------------------------------------------
9 |    n // error
  |    ^
  |    Not found: n
  |
  | longer explanation available when compiling with `-explain`
